fixed padding of FOIA page on mobile

--- a/public/css/freedomofact.css
+++ b/public/css/freedomofact.css
@@ -35,3 +35,10 @@ a.link:hover{
         word-break: break-all;
     }
 }
+
+
+@media screen and (max-width: 575px) {
+    .content{
+        padding: 5%;
+    }
+}
